[package]
name = "ticks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oauth2 = { version = "4.4.2", features = ["reqwest"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["serde_derive"] }
serde_json = "1.0.120"
serde_repr = "0.1.19"
tokio = { version = "1.38.0", features = ["full"] }
