[package]
name = "ticks"
description = "Simple, ergonomic Rust wrapper for the TickTick Open API"
repository = "https://github.com/jordi-star/ticks"
version = "0.5.0"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["ticktick", "api", "openapi", "tasks"]
categories = ["api-bindings", "asynchronous"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["alloc"] }
oauth2 = { version = "4.4.2", features = ["reqwest"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.203", features = ["serde_derive"] }
serde_json = "1.0.120"
serde_repr = "0.1.19"
tokio = "1.38.0"
